--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Rubik', sans-serif;font-weight: 600; }
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
